k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: microservice
